--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -203,8 +203,9 @@
 }
 
 .panel-production {
-    min-width: 400px;
-    width: 50%;
+    min-width: 350px;
+    max-width: 400px;
+    width: 100%;
 }
 
 .panel-production-homepage {
