Fixed CSS issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -203,9 +203,7 @@
 }
 
 .panel-production {
-    min-width: 350px;
-    max-width: 400px;
-    width: 100%;
+    width: 375px;
 }
 
 .panel-production-homepage {
