--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,10 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" ></script>
+  
   <script type="text/javascript">
    $(function() {
-    var images = ['01.png', '02.png', '03.png', '04.png', '05.png', '06.png'];
+    var images = ['01.png', '02.png', '03.png', '04.png', '05.png', '06.png', '07.png'];
     $('.backingimage').css({'background-image': 'url({{ site.baseurl }}/image/backing/' + images[Math.floor(Math.random() * images.length)] + ')'});
    });
   </script>
