--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -203,7 +203,7 @@
 }
 
 .panel-production {
-    width: 375px;
+    width: 355px;
 }
 
 .panel-production-homepage {
@@ -226,7 +226,7 @@ a.panel-date {
 
 
 .postblock {
-    display: inline-block;
+    display: inline-flex;
 }
 
 .blocks {
@@ -237,6 +237,7 @@ a.panel-date {
 .panel {
     margin:10px;
     display:inline-block;
+    font-size:15px !important;
 }
 
 
