--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -236,6 +236,7 @@ a.panel-date {
 
 .panel {
     margin:10px;
+    margin-left: 0px;
     display:inline-block;
     font-size:15px !important;
 }
