--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -185,19 +185,13 @@
 
 /*Blog */
 
-.twitter-timeline {
-    min-width: 300px !important;
-    height: 600px !important;
-    max-width: 400px !important;
-    width:100% !important;
+.grid-30 {
+  height: 250px;
+  border: 1px solid #EEEEEE;
+  margin: 10px;
 
 }
-
-.panel-twitter {
-    max-width: 400px;
-    float:left;
-}
-
+/*
 .panel-post {
     min-width: 300px;
     width: 30%;
@@ -216,7 +210,7 @@
 .panel-body {
     font-weight: 300;
 }
-
+*/
 a.panel-date {
     font-style: italic;
     font-size:15px;
@@ -225,7 +219,7 @@ a.panel-date {
     text-decoration: none;
 }
 
-
+/*
 .postblock {
     display: inline-block;
 }
@@ -245,6 +239,7 @@ a.panel-date {
 .panel-post-home {
 	width: 355px;
 }
+*/
 
 /**
  * Site footer
@@ -395,6 +390,9 @@ a.panel-date {
 }
 
 /* Panel */
+.atbottom {
+  padding-top: 40px;
+}
 .panel {
   margin-bottom: 21px;
   background-color: #ffffff;
@@ -407,7 +405,7 @@ a.panel-date {
 }
 
 .panel-heading {
-  padding: 10px 15px;
+  padding: 10px 0px;
   border-bottom: 1px solid transparent;
   font-weight: 700;
   border-top-right-radius: -1;
