--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
           <div class="trigger">
           <a href="{{ site.baseurl }}/"><i class="fa fa-home page-link home-icon" aria-hidden="true"></i></a>
             {% for my_page in site.pages %}
-              {% if my_page.title %}
+              {% if page.menu == 'main' %}
               <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
               {% endif %}
             {% endfor %}
