Some pretty essential changes!
- Fixed the menu (that’s rather important)
- Fixed divs for posts, they’re now 200px in height so the ‘read more’
looks better
- Many little changes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -59,7 +59,7 @@
 
 .tinyimage {
     height: 125px;
-    padding-right: 4px;
+    padding-right: 30px;
     float: left;
 }
 
@@ -390,8 +390,12 @@ a.panel-date {
 }
 
 /* Panel */
+.attop {
+  height: 200px;
+}
 .atbottom {
-  padding-top: 40px;
+  padding-top: 0px;
+  float: right;
 }
 .panel {
   margin-bottom: 21px;
