--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,10 +21,12 @@
           <div class="trigger">
           <a href="{{ site.baseurl }}/"><i class="fa fa-home page-link home-icon" aria-hidden="true"></i></a>
             {% for my_page in site.pages %}
-              {% if page.menu == 'main' %}
+              {% if my_page.title contains 'HIDE' %}
+              {% elsif my_page.menu == 'main' %}
               <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
               {% endif %}
             {% endfor %}
+
             <a href="//twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter page-link" aria-hidden="true"></i></a>
             <a href="//facebook.com/{{ site.facebook_username }}"><i class="fa fa-facebook page-link" aria-hidden="true"></i></a>
             <a href="//youtube.com/channel/{{ site.youtube_channel_id }}"><i class="fa fa-youtube page-link" aria-hidden="true"></i></a>
