--- a/_layouts/production.html
+++ b/_layouts/production.html
@@ -19,9 +19,15 @@ layout: default
   <b><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Description:</b>  {{ content }}
   </div><br>
 
+  {% if page.youtube == null %} 
+  {% elsif page.youtube == " " %}
+  {% elsif page.youtube == "  " %} 
+  {% elsif page.youtube == "   " %} 
+  {% else %}
   <p class="minorinfo"><b><i class="fa fa-film" aria-hidden="true"></i> Watch it: </b></p>
   <iframe id="ytplayer" type="text/html" width="100%" height="400"
   src="{{ page.youtube }}?autoplay=0&modestbranding=1&showinfo=0"
   frameborder="0"/>
+{% endif %}
 
 </article>
