--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,6 +4,10 @@
 
 .grid-33 {
 	border: 1px solid #EEEEEE;
+	float: left !important;
+	margin: 5px !important;
+	padding: 10px !important;
+	width: 28% !important;
 }
 
  .bigblockright {
