--- a/grid.css
+++ b/grid.css
@@ -1,6 +1,11 @@
 /* ============================================ */
 /* This file has a mobile-to-desktop breakpoint */
 /* ============================================ */
+
+div.grid-33.mobile-grid-100 {
+  width: 100% !important;
+}
+
 @media (max-width: 400px) {
   @-ms-viewport {
     width: 320px;
