--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 ---
-<article class="post">
+
+
+<article class="post wrappertight">
 
   <header class="post-header">
   </header>
-    <h1 class="post-title">{{ page.title }}</h1>
-
-  <div class="post-content">
+  
+  <div class="post-content ">
     {{ content }}
   </div>
 
