--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-  <div class="pagecontent">
+<div class="pagecontent">
 
 
 <footer class="site-footer">
@@ -7,17 +7,19 @@
 
     <h2 class="footer-heading"></h2>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-      <i class="fa fa-copyright" aria-hidden="true"></i> Copyright {{ site.title }} - <script>document.write(new Date().getFullYear())</script><br>
+<div class="grid-container">
+      <div class="grid-33 mobile-grid-100 noborder">
+      {{ site.description }}<br>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="grid-33 mobile-grid-100 noborder">
       
       </div>
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+      <div class="grid-33 mobile-grid-100 noborder rightbox">
+        <p><i class="fa fa-copyright" aria-hidden="true"></i> Copyright {{ site.title }} - <script>document.write(new Date().getFullYear())</script></p>
+        <br>
+        <div class="siteby"><a href="//northfolk.co.uk"><span class="siteby1">Site by</span> <div class="sitebyimg"></div></a></div>
       </div>
     </div>
 
