--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     60px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
@@ -24,9 +24,9 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    1200px;
+$content-width:    100%;
 
-$on-palm:          600px;
+$on-palm:          800px;
 $on-laptop:        800px;
 
 
