--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -50,7 +50,7 @@
 #topcontain {
     display:inline-block;
     width: 100% !important;
-    background-color:rgba(1, 120, 255, 0.969);
+    background-color:rgba(1, 120, 255, 1);
 }
 
 .page-link {
@@ -78,8 +78,9 @@
     margin-top: 10px;
     padding-top: 20px;
     height: 130px;
-    width: 150px;
+    width: 130px;
     background-size: contain;
+    background-position-x: center;
     background-repeat: no-repeat;
     border: 1px solid #f9f9f9;
 }
@@ -107,6 +108,7 @@
     margin-bottom: -10px !important;
     // Positioning context for the mobile navigation icon
     position: relative;
+    z-index: 2;
 }
 
 .site-title {
@@ -1076,24 +1078,48 @@ fieldset[disabled] .btn-warning.focus {
     background-color: #fdfdfd;
 }
 
-.videobox {
+/* homevideo */
+
+.videobox {    
+    background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAUElEQVQoU2NkrPj/X0GCAQ4evIAw0cUYFSf8/w9TBVIEU4DMBsnDFaJLgCSRxcAK0U1Cthomx4jsRpj7YE5BdgbxCom2GuZrojxDVPAQG+AAnm1GAd6B9GMAAAAASUVORK5CYII=) repeat;
     width: 100%;
-    background-color: #000;
+    overflow: hidden;
     height: 500px;
     color: #fff;
     position: relative;
-    text-align: center;
+    z-index: 1;
+}
+
+
+.videoiframe {
+  @media (max-width: $on-laptop) {
+  display: none !important;
+  }
+  @media (min-width: $on-laptop) {
+  width: 100% !important;
+  height: 160% !important;
+  max-width: 100% !important;
+  margin-top: -20%;
+  position: absolute;
+  pointer-events: none;
+}
+}
+
+.videocover {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  padding: 0px 10px;
+  background-color: rgba(86, 86, 86, 0.13);
 }
 
 .overlaytext {
   bottom: 40%;
-  position: absolute;
   width: 100%;
 }
 
 .overlaysocial {
   bottom: 5%;
-  position: absolute;
   width: 100%;
   left: 0px;
 }
@@ -1187,6 +1213,12 @@ fieldset[disabled] .btn-warning.focus {
 
 }
 
+.player-showreel {
+  width: 80% !important;
+  max-width: 900px !important;
+  margin-bottom: 40px;
+}
+
 
 .panelhead-prods {
     width: 100%;
@@ -1200,7 +1232,7 @@ iframe, .youtube, .vidcomingsoon {
 }
 
 .wrappertight {
-  width: calc(100% - (100px * 2)) !important;
+  width: calc(100% - (30px * 2)) !important;
   margin: 0 auto;
 }
 
@@ -1318,8 +1350,24 @@ iframe, .youtube, .vidcomingsoon {
    background-repeat: no-repeat !important;
 }
 
+  .flowboxparent {
+      border-bottom: 1px solid rgba(154, 154, 154, 0.08);
+      padding-bottom: 20px;
+      @media (min-width: $on-laptop) {
+      border-right: 1px solid rgba(154, 154, 154, 0.08);
+      border-bottom: 0px solid !important;
+      }
+  }
+
+  .endbox {
+      border-bottom: 0px solid rgba(154, 154, 154, 0.08);
+      @media (min-width: $on-laptop) {
+      border-right: 0px solid !important;
+      }
+  }
+
 .flowblock {
-    height:150px; 
+   height:150px; 
    width: 150px; 
    background-size: contain !important; 
    margin: 0 auto;
