--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,16 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" ></script>
+
+  <!-- Shortcut icons --> 
+  <link rel="apple-touch-icon" sizes="180x180" href="{{site.baseurl}}/image/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl}}/image/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}/image/favicons/favicon-16x16.png">
+  <link rel="manifest" href="{{site.baseurl}}/image/favicons/manifest.json">
+  <link rel="mask-icon" href="{{site.baseurl}}/image/favicons/safari-pinned-tab.svg" color="#2d89ef">
+  <link rel="shortcut icon" href="{{site.baseurl}}/image/favicons/favicon.ico">
+  <meta name="msapplication-config" content="{{site.baseurl}}/image/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
   
   <script type="text/javascript">
    $(function() {
