--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -64,6 +64,8 @@
     width: 100%;
     margin: 0 auto;
     min-width:350px;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .page-link:hover {
@@ -275,6 +277,10 @@ a.panel-date {
     margin-top: 10vh;
 }
 
+a.linkfooter, a:visited .linkfooter {
+  color: #ffffff !important;
+}
+
 .footer-heading {
     font-size: 18px;
     margin-bottom: $spacing-unit / 2;
@@ -286,6 +292,7 @@ a.panel-date {
     list-style: none;
     margin-left: 0;
 }
+
 
 .rightbox {
   text-align: right;
@@ -1106,11 +1113,11 @@ fieldset[disabled] .btn-warning.focus {
 }
 
 .videocover {
-  text-align: center;
   position: absolute;
   width: 100%;
   padding: 0px 10px;
   background-color: rgba(86, 86, 86, 0.13);
+  text-align: center;
 }
 
 .overlaytext {
@@ -1127,6 +1134,7 @@ fieldset[disabled] .btn-warning.focus {
 .social-link {
   background-color: #ffffff;
   margin-right: 10px;
+  text-align: center;
   color: #000000;
   width: 20px;
   height: 20px;
@@ -1177,10 +1185,10 @@ fieldset[disabled] .btn-warning.focus {
 }
 
 .largeimage {
-  width: 100%;
-  height: 200px;
-  background-size: cover !important;
-  background-position-x: center !important;
+    width: 100%;
+    min-height: 200px;
+    background-size: cover !important;
+    background-position-x: center !important;
 }
 
 .blockhome {
@@ -1232,7 +1240,7 @@ iframe, .youtube, .vidcomingsoon {
 }
 
 .wrappertight {
-  width: calc(100% - (30px * 2)) !important;
+  width: calc(100% - (60px * 2)) !important;
   margin: 0 auto;
 }
 
@@ -1248,6 +1256,7 @@ iframe, .youtube, .vidcomingsoon {
   font-size: 20px;
   position: relative;
   color: #000000;
+  margin: 0 auto;
   min-height: 500px;
   background-color: rgb(226, 226, 226)
 }
@@ -1356,6 +1365,8 @@ iframe, .youtube, .vidcomingsoon {
       @media (min-width: $on-laptop) {
       border-right: 1px solid rgba(154, 154, 154, 0.08);
       border-bottom: 0px solid !important;
+      user-select: none;
+      -webkit-user-select: none;
       }
   }
 
@@ -1384,4 +1395,15 @@ iframe, .youtube, .vidcomingsoon {
   text-align: center;
   font-size: 14px;
 
+}
+
+.centered {
+  text-align: center;
+}
+
+.introtous {
+    padding: 15px;
+    width: 90%;
+    margin: 0 auto;
+    background-color: #f5f3f3;
 }
