Fix Png and Sizing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
 
       <div class="grid-33 mobile-grid-100 noborder rightbox">
 
-      {% include socialicons.html %}
+      <div class="footersocial">{% include socialicons.html %}</div>
 
 
       <br>{{ site.description }}<br><br>
