--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,15 +5,15 @@
 .grid-33 {
 	border: 1px solid #EEEEEE;
 	float: left !important;
-	margin: 5px !important;
+	margin: 2px !important;
 	padding: 10px !important;
 	width: 32% !important;
 }
 
- .bigblockright {
- 	display: inline-block;
-  padding-left: 30px;
- }
+.attop {
+  overflow: hidden;
+}
+
 
 .backingimage {
     width:100% !important;
@@ -77,15 +77,22 @@
 
 .tinyimage {
     float: left;
-    margin-top: 10px;
-    padding-top: 20px;
+    margin-top: 20px;
     height: 130px;
     width: 130px;
     background-size: contain;
     background-position-x: center;
     background-repeat: no-repeat;
     border: 1px solid #f9f9f9;
+    margin-right: 30px;
+    margin-bottom: 20px;
 }
+
+.bigblockright {
+    display: inline-block;
+
+}
+
 
 .production-title {
     font-size: 30px;
@@ -1088,9 +1095,10 @@ fieldset[disabled] .btn-warning.focus {
 /* homevideo */
 
 .videobox {    
-    background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAUElEQVQoU2NkrPj/X0GCAQ4evIAw0cUYFSf8/w9TBVIEU4DMBsnDFaJLgCSRxcAK0U1Cthomx4jsRpj7YE5BdgbxCom2GuZrojxDVPAQG+AAnm1GAd6B9GMAAAAASUVORK5CYII=) repeat;
+    background:url('../image/showreel-still.png') no-repeat;
     width: 100%;
     overflow: hidden;
+    background-size: cover;
     height: 500px;
     color: #fff;
     position: relative;
@@ -1139,6 +1147,10 @@ fieldset[disabled] .btn-warning.focus {
   width: 20px;
   height: 20px;
 
+}
+
+.footersocial .overlaysocial a i {
+    margin-bottom: 10px;
 }
 
 .social-link:hover {
@@ -1236,6 +1248,7 @@ fieldset[disabled] .btn-warning.focus {
 iframe, .youtube, .vidcomingsoon {
   border: 5px solid #000 !important;
   max-width: 600px;
+  max-width: 100%;
 
 }
 
